k8s/eshop.yaml
apiVersion: v1
kind: Service
metadata:
  name: eshop
  labels:
    app: eshop
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: eshop
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
  labels:
    app: inventory
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: inventory
---
apiVersion: v1
kind: Service
metadata:
  name: billing
  labels:
    app: billing
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: billing
---
apiVersion: v1
kind: Service
metadata:
  name: delivery
  labels:
    app: delivery
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: delivery
---
apiVersion: v1
kind: Service
metadata:
  name: notification
  labels:
    app: notification
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: notification
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshop
  template:
    metadata:
      labels:
        app: eshop
    spec:
      containers:
        - name: eshop
          image: aeraki/istio-opentracing-demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: aeraki/istio-opentracing-demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
  template:
    metadata:
      labels:
        app: billing
    spec:
      containers:
        - name: billing
          image: aeraki/istio-opentracing-demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      containers:
        - name: delivery
          image: aeraki/istio-opentracing-demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - name: notification
        image: aeraki/istio-opentracing-demo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumer-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-consumer
  template:
    metadata:
      labels:
        app: kafka-consumer
    spec:
      containers:
      - name: kafka-consumer
        image: aeraki/istio-opentracing-demo-kafka-consumer:latest
        imagePullPolicy: Always
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: eshop-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eshop
spec:
  hosts:
  - "*"
  gateways:
  - eshop-gateway
  http:
  - match:
    - uri:
        prefix: /checkout
    route:
    - destination:
        port:
          number: 8080
        host: eshop
